--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,10 @@
     justify-content: space-between;
 }
 
-@media(max-width:800px){
+@media(max-width:1300px){
     .main-wrapper{
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
