--- a/src/components/MasterCard.css
+++ b/src/components/MasterCard.css
@@ -1,25 +1,28 @@
 .card {
-    height: auto;
-    width: 30vw;
+    height: 300px;
+    width: 500px;
     background-image: linear-gradient(40deg, rgb(149, 62, 59), #a523b6);
     padding: 15px;
     display: flex;
     flex-direction: column;
     border-radius: 2%;
     color: white;
-    margin-left: 10%;
+    margin-top: 4%;
   }
 
-  @media(max-width: 800px){
-      .card{
-          width: 45%;
-          margin-bottom: 7%;
-      }
-  }
+
+  @media(max-width: 600px){
+    .card{
+        width: 400px;
+        margin-bottom: 7%;
+    }
+}
 
   .top {
     margin-top: 2%;
+    width: 470px;
   }
+
 
   .lowertop {
     margin-top: 4%;
