--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -10,13 +10,30 @@ font-size: 28px;
 a{
     text-decoration: none;
     color: black;
-    font-weight: 800;
+    font-weight: 600;
 }
 
 @media(max-width: 900px){
     .nav-wrapper{
         font-size: 18px;
     }
+
+}
+
+span img{
+    position: relative;
+    left: 87vw;
+    bottom: 8vh
+}
+
+@media(max-width: 900px){
+    span img{
+        width: 50px;
+        height:50px;
+        position: relative;
+        bottom: 50px;
+     }
+
 }
 
 @media(max-width: 500px){
