--- a/src/components/ExpenseDetails.css
+++ b/src/components/ExpenseDetails.css
@@ -13,6 +13,8 @@
 .estimated-tax span button {
     background-color: blue;
     color: white;
+    border: 1px solid blue;
+    border-radius: 5px;
 }
 
 .promotional-code{
