--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,47 +1,39 @@
 .nav-wrapper {
-display: flex;
-justify-content:flex-end;
-font-size: 28px;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 28px;
+  align-items: flex-end;
 }
 
-.nav-wrapper span{
-    margin-left: 5%;
+.nav-wrapper span {
+  margin-left: 5%;
 }
-a{
-    text-decoration: none;
-    color: black;
-    font-weight: 600;
+a {
+  text-decoration: none;
+  color: rgb(63, 61, 61);
+  font-weight: 600;
 }
-
-@media(max-width: 900px){
-    .nav-wrapper{
-        font-size: 18px;
-    }
-
+div span img {
+    height: 50px;
 }
 
-span img{
-    position: relative;
-    left: 87vw;
-    bottom: 8vh
+@media (max-width: 900px) {
+  .nav-wrapper {
+    font-size: 18px;
+  }
 }
 
-@media(max-width: 900px){
-    span img{
-        width: 50px;
-        height:50px;
-        position: relative;
-        bottom: 50px;
-     }
+@media (max-width: 500px) {
+  .nav-wrapper {
+    font-size: 12px;
+  }
 
+  div span img {
+    height: 25px;
+    width: 25px;
 }
 
-@media(max-width: 500px){
-    .nav-wrapper{
-        font-size: 12px;
-    }
-
-    .nav-wrapper span{
-        margin-left: 2%;
-    }
+  .nav-wrapper span {
+    margin-left: 2%;
+  }
 }
