--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,14 @@
 html {
   font-family: sans-serif;
   background: #fff;
-  padding: 0;
+  padding: 0px;
   width: 100%;
+  margin: 0px;
 }
 
 body {
-  margin: 0;
-  padding: 5% 5% 5% 10%;
+  margin: 0px;
+  padding: 0px;
   width:100%;
 }
 
